<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_background"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"
    tools:context=".MainActivity">

   <!--<ImageView-->
       <!--android:layout_width="match_parent"-->
       <!--android:layout_height="match_parent"-->
       <!--android:scaleType="centerCrop"-->
       <!--android:src="@drawable/background"/>-->

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="@dimen/menu_space"
       android:text="@string/long_app_name"
       android:textAppearance="?android:textAppearanceLarge"
       android:textSize="@dimen/menu_text_size"/>

   <Button
       android:id="@+id/new_button"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/new_game_label"
       android:textSize="18sp" />

   <Button
       android:id="@+id/continue_button"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/continue_label"
       android:textSize="18sp" />

   <Button
       android:id="@+id/settings_button"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/settings_label"
       android:textSize="18sp" />

   <Button
       android:id="@+id/help_button"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:onClick="gotoPan"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/help_label"
       android:textSize="18sp" />

   <Button
       android:id="@+id/quit_button"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_margin="@dimen/menu_button_margin"
       android:padding="@dimen/menu_button_padding"
       android:text="@string/quit_label"
       android:textSize="18sp" />
</LinearLayout>
